# simple-solana-program

./: .gitignore  run.sh
client/src/: client.rs  lib.rs  main.rs  utils.rs
program/: Cargo.toml
program/src/: lib.rs
show_id/: Cargo.toml
show_id/src/: main.rs
