[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "1.13.4"

[dev-dependencies]
solana-program-test = "1.13.4"
solana-sdk = "1.13.4"

[lib]
crate-type = ["cdylib","lib"]
